testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_single_line_string/case2.expect.out
error: unterminated single-line string
  ==> case2.cj:14:22:
   | 
14 |     var a = "canejie ${ '
   |                      ~~ ^^ unterminated single-line string
   |                      |
   |                      because this interpolation is not terminated with a '}'
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

error: unterminated string interpolation
  ==> case2.cj:15:19:
   | 
15 |     var b = "cangjie ${''
   |             ~        ^^^^^ unterminated string interpolation
   |             |
   |             because it is in single-line string
   | 

2 errors generated, 2 errors printed.
